Lab Dynamic calculator implementation

--- a/DynamicCalculator/calculator.html
+++ b/DynamicCalculator/calculator.html
@@ -15,7 +15,7 @@
         </script>
     </head>
     <body>
-        <div id="container">
+        <div id="container" style="padding: 10px; border: 2px solid white;">
             item: <input type="text" id="item-name">
             value: <input type="text" id="item-value">
             <button id="add-item">add</button>
@@ -23,7 +23,7 @@
         <ul id="item-list" class="items">
 
         </ul>
-        <div id="total">0.00</div>
+        <div id="total" style="margin-left: 10px;">0.00</div>
         <script src="./utils.js"></script>
     </body>
 </html>
