--- a/DynamicCalculator/calculator.html
+++ b/DynamicCalculator/calculator.html
@@ -4,26 +4,18 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device, initial-scale=1.0">
         <title>Lab item list</title>
-        <script>
-            // DOMContentLoaded wait until all dom is loaded, check the docs in below link
-            // https://developer.mozilla.org/en-US/docs/Web/API/Document/DOMContentLoaded_event
-            document.addEventListener("DOMContentLoaded", (_) => {
-                let item_name = document.querySelector("#item-name");
-                let item_value = document.querySelector("#item-value");
-                // use here what you have in utils.js
-            });
-        </script>
+        <link rel="stylesheet" href="calculator.css"/>
     </head>
     <body>
-        <div id="container" style="padding: 10px; border: 2px solid white;">
-            item: <input type="text" id="item-name">
-            value: <input type="text" id="item-value">
-            <button id="add-item">add</button>
+        <h1>Dynamic calculator</h1>
+        <div id="container" class="input-container">
+            <div class="input-bar">Item: <input type="text" id="item-name"></div>
+            <div class="input-bar">Value: <input type="text" id="item-value"></div>
+            <div class="add-button"><button id="add-item">Add item</button></div>
         </div>
-        <ul id="item-list" class="items">
-
-        </ul>
-        <div id="total" style="margin-left: 10px;">0.00</div>
+        <ul id="item-list" class="items"></ul>
+        <hr style="width: 300px; margin: 0px">
+        <div id="total" style="margin-left: 10px; font-size: large; font-weight: bold;">Total: $<span class="total-value">0.00</span></div>
         <script src="./utils.js"></script>
     </body>
 </html>
