--- a/PokemonWeightCalc/index.html
+++ b/PokemonWeightCalc/index.html
@@ -8,13 +8,18 @@
     </head>
     <body>
         <h1>Pokemon weight calculator</h1>
-        <div id="container" class="input-container">
-            <div class="input-bar">Pokemon: <input type="text" id="item-name"></div>
-            <div class="add-button"><button id="add-item">Add Pokemon</button></div>
-        </div>
-        <ul id="item-list" class="items"></ul>
-        <hr style="width: 300px; margin: 0px">
-        <div id="total" style="margin-left: 10px; font-size: large; font-weight: bold;">Total weight: <span class="total-value">0.00</span></div>
+        <div class="top-container">
+            <div id="container" class="input-container">
+                <div class="input-bar">Pokemon: <input type="text" id="item-name"></div>
+                <div class="add-button"><button id="add-item">Add Pokemon</button></div>
+                <br>
+                <hr style="margin: 0px">
+                <div id="total" style="margin-left: 10px; font-size: large; font-weight: bold;">Total weight: <span class="total-value">0.00</span></div>
+            </div>
+            <div class="item-container">
+                <ul id="item-list" class="items"></ul>
+            </div>
+        </div>  
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script src="./utils.js"></script>
     </body>
